# dns_resolver

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/client/: client.c
src/linked_list/: CMakeLists.txt  linked_list.c  linked_list.h
src/resolver/: CMakeLists.txt  resolver.c  resolver.h
